INTYG-3495: TS-bas avstånd felmeddelanden.

--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form11.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form11.html
@@ -67,6 +67,6 @@
         </div>
       </td>
     </tr>
-    <tr><td colspan="3"><wc-field-validation field-type="radio-group" validations="viewState.getValidationErrors('lakarordineratLakemedelsbruk')"></wc-field-validation></td></tr>
+    <tr ng-show="viewState.getValidationErrors('lakarordineratLakemedelsbruk')" class="last-validation"><td colspan="3"><wc-field-validation field-type="radio-group" validations="viewState.getValidationErrors('lakarordineratLakemedelsbruk')"></wc-field-validation></td></tr>
   </table>
 </div>
