--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form14.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form14.html
@@ -60,6 +60,6 @@
         </table>
       </td>
     </tr>
-    <tr><td colspan="3"><wc-field-validation field-type="radio-group" validations="viewState.getValidationErrors('sjukhusEllerLakarkontakt')"></wc-field-validation></td></tr>
+    <tr ng-show="viewState.getValidationErrors('sjukhusEllerLakarkontakt')" class="last-validation"><td colspan="3"><wc-field-validation field-type="radio-group" validations="viewState.getValidationErrors('sjukhusEllerLakarkontakt')"></wc-field-validation></td></tr>
   </table>
 </div>
