--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form4.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form4.html
@@ -43,6 +43,7 @@
         </div>
       </td>
     </tr>
-    <tr><td colspan="3"><wc-field-validation field-type="radio-group" validations="viewState.getValidationErrors('riskfaktorerstroke')"></wc-field-validation></td></tr>
+    <tr ng-show="viewState.getValidationErrors('riskfaktorerstroke')" class="last-validation">
+      <td colspan="3"><wc-field-validation field-type="radio-group" validations="viewState.getValidationErrors('riskfaktorerstroke')"></wc-field-validation></td></tr>
   </table>
 </div>
