--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form7.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form7.html
@@ -28,6 +28,6 @@
         </div>
       </td>
     </tr>
-    <tr><td colspan="3"><wc-field-validation field-type="radio-group" validations="viewState.getValidationErrors('medvetandestorning')"></wc-field-validation></td></tr>
+    <tr ng-show="viewState.getValidationErrors('medvetandestorning')" class="last-validation"><td colspan="3"><wc-field-validation field-type="radio-group" validations="viewState.getValidationErrors('medvetandestorning')"></wc-field-validation></td></tr>
   </table>
 </div>
