--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form2.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form2.html
@@ -1,8 +1,6 @@
 <a id="anchor-horselbalans" name="anchor.horselbalans"></a>
-<div wc-field
-     field-dynamic-label="KAT_2.RBK"
-     field-has-errors="viewState.common.validation.messagesGrouped.horselbalans"
-     id="horselBalansForm">
+<div wc-field field-dynamic-label="KAT_2.RBK"
+     field-has-errors="viewState.common.validation.messagesGrouped.horselbalans" id="horselBalansForm">
 
   <table class="table table-form">
     <tr>
@@ -17,7 +15,12 @@
                  ng-model="viewState.intygModel.horselBalans.balansrubbningar" ng-change="validate()"></td>
       <td><span dynamic-label key="FRG_10.RBK"></span> <span class="required">*</span></td>
     </tr>
-    <tr><td colspan="3"><wc-field-validation field-type="radio-group" validations="viewState.getValidationErrors('balansrubbningar')"></wc-field-validation></td></tr>
+    <tr ng-show="viewState.getValidationErrors('balansrubbningar')">
+      <td colspan="3">
+        <wc-field-validation field-type="radio-group"
+                             validations="viewState.getValidationErrors('balansrubbningar')"></wc-field-validation>
+      </td>
+    </tr>
     <tr ng-show="viewState.korkortd">
       <td><input id="horselbalansby" name="horselbalansb" type="radio" ng-value="true"
                  ng-model="viewState.intygModel.horselBalans.svartUppfattaSamtal4Meter" ng-change="validate()"></td>
@@ -25,6 +28,11 @@
                  ng-model="viewState.intygModel.horselBalans.svartUppfattaSamtal4Meter" ng-change="validate()"></td>
       <td><span dynamic-label key="FRG_11.RBK"></span> <span class="required">*</span></td>
     </tr>
-    <tr><td colspan="3"><wc-field-validation field-type="radio-group" validations="viewState.getValidationErrors('svartupfattasamtal4meter')"></wc-field-validation></td></tr>
+    <tr ng-show="viewState.korkortd" class="last-validation">
+      <td colspan="3">
+        <wc-field-validation field-type="radio-group"
+                             validations="viewState.getValidationErrors('svartupfattasamtal4meter')"></wc-field-validation>
+      </td>
+    </tr>
   </table>
 </div>
