--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form3.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form3.html
@@ -29,7 +29,8 @@
         </div>
       </td>
     </tr>
-    <tr><td colspan="3"><wc-field-validation field-type="radio-group" validations="viewState.getValidationErrors('funktionsnedsattning')"></wc-field-validation></td></tr>
+    <tr ng-show="viewState.getValidationErrors('funktionsnedsattning')">
+      <td colspan="3"><wc-field-validation field-type="radio-group" validations="viewState.getValidationErrors('funktionsnedsattning')"></wc-field-validation></td></tr>
     <tr ng-show="viewState.korkortd">
       <td><input id="funktionsnedsattningby" name="funktionsnedsattningb" type="radio"
                  ng-value="true" ng-model="viewState.intygModel.funktionsnedsattning.otillrackligRorelseformaga"
@@ -40,6 +41,7 @@
       </td>
       <td><span dynamic-label key="FRG_13.RBK"></span> <span class="required">*</span></td>
     </tr>
-    <tr><td colspan="3"><wc-field-validation field-type="radio-group" validations="viewState.getValidationErrors('otillrackligrorelseformaga')"></wc-field-validation></td></tr>
+    <tr ng-show="viewState.korkortd" class="last-validation">
+      <td colspan="3"><wc-field-validation field-type="radio-group" validations="viewState.getValidationErrors('otillrackligrorelseformaga')"></wc-field-validation></td></tr>
   </table>
 </div>
