INTYG-3500: GUIfix på FK7263.

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/css/fk7263.scss
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/css/fk7263.scss
@@ -28,7 +28,7 @@ This is to avoid leaking module specific style rules outside of it's intended co
     background-image: $socialstyrelsen-background-image;
     background-repeat: no-repeat;
     padding: 0 0 3px 25px;
-    display: block;
+    display: inline-block;
   }
 
   .intyg-body {
