--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form6a-7-11.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form6a-7-11.html
@@ -44,7 +44,7 @@
                                                name="recommendationsToFk.other"
                                                ng-change="onOvrigtChange(); validate()"
                                                ng-model="model.rekommendationOvrigtCheck"> Övrigt (ange
-                    vad *)</label><span wc-help-mark
+                    vad <span class="required">*</span>)</label><span wc-help-mark
                                       field-help-text="fk7263.helptext.rekommendationer.ovrigt"></span>
 
 
@@ -62,8 +62,8 @@
 
             <!-- 7 -->
             <span id="recommendationsToFkReabInQuestionRadioGroup">
-                  <h4 class="inline-block">Är arbetslivsinriktad rehabilitering aktuell?</h4><span wc-help-mark
-                                                                                                   field-help-text="fk7263.helptext.rekommendationer.arbetslivsinriktad-rehabilitering"></span>
+                  <h4 class="inline-block">Är arbetslivsinriktad rehabilitering aktuell? <span wc-help-mark
+                                                                                               field-help-text="fk7263.helptext.rekommendationer.arbetslivsinriktad-rehabilitering"></span></h4>
 
                   <!-- Rehab -->
                   <!-- YES -->
