--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form8a.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form8a.html
@@ -20,7 +20,7 @@
 
                     <wc-validation-wrapper field-type="multi-text" validations="viewState.getValidationErrors('nuvarandearbetsuppgifter')">
                         <div class="indent" ng-if="model.nuvarandeArbete">
-                            <label for="currentWork">Ange aktuella arbetsuppgifter *</label>
+                            <label for="currentWork">Ange aktuella arbetsuppgifter <span class="required">*</span></label>
 
                             <div class="controls">
                                 <textarea id="currentWork" class="form-control" name="currentWork" rows="2" auto-expand
