--- a/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
@@ -63,6 +63,10 @@ a {
 
 /* Only used in fk7263. Move it there. */
 
+.bottom-padding-medium {
+    padding-bottom: 20px;
+}
+
 .bottom-padding-small {
     padding-bottom: 5px;
 }
