--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form2.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form2.html
@@ -7,10 +7,10 @@
 
     <wc-fmb-help-display related-form-id="FALT2" fmb-states="fmbViewState" field-name="DIAGNOS">
 
-      <div class="row bottom-padding-small">
+      <div class="row bottom-padding-medium">
         <div class='col-xs-12'>
-          <div class='divider'>
-            <span message key="fk7263.label.valjkodverk"></span>
+          <div class="form-group">
+            <span class="bold" message key="fk7263.label.valjkodverk"></span><br>
             <label class="radio-inline">
               <input type="radio" id="diagnoseKodverk_ICD_10_SE" name="diagnosKodverk" value="ICD_10_SE"
                      ng-model="viewModel.diagnosKodverk" checked="checked" ng-change="onChangeKodverk(); validate()">
@@ -26,7 +26,7 @@
       </div>
       <div class="row">
         <div class='col-xs-3'>
-          <label class="control-label unbreakable">ICD-10 *</label>
+          <label class="control-label unbreakable">ICD-10 <span class="required">*</span></label>
           <div class="diagnos-row">
             <input type="text" class="form-control" id="diagnoseCode" name="diagnose.code" ng-blur="updateFmbText(); validate()"
                    value="" class='diagnose-code col-xs-11 form-control'
@@ -54,7 +54,7 @@
           </div>
         </div>
         <div class='col-xs-9'>
-          <label class="control-label">Diagnos *</label>
+          <label class="control-label">Diagnos <span class="required">*</span></label>
           <input type="text" class="form-control maxwidth" id="diagnoseDescription" class="col-xs-12 form-control"
                  name="diagnose.description" value=""
                  ng-class="{'fielderror' : viewState.getValidationErrors('diagnosbeskrivning1')}"
