--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form4.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form4.html
@@ -7,7 +7,7 @@
 
     <a class="soclink" href="http://www.socialstyrelsen.se/riktlinjer/forsakringsmedicinsktbeslutsstod"
        target="_blank" title="Öppnar Socialstyrelsens beslutstöd för angiven huvuddiagnos">Socialstyrelsens
-      försäkringsmedicinska beslutsstöd</a>
+      försäkringsmedicinska beslutsstöd</a> <img src="/img/link_icon.png"/>
     <wc-fmb-help-display related-form-id="FALT4" fmb-states="fmbViewState" field-name="FUNKTIONSNEDSATTNING">
       <wc-validation-wrapper field-type="multi-text"
                              validations="viewState.getValidationErrors('funktionsnedsattning')">
