--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form5.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form5.html
@@ -8,7 +8,7 @@
 
     <a class="soclink" href="http://www.socialstyrelsen.se/riktlinjer/forsakringsmedicinsktbeslutsstod"
        target="_blank" title="Öppnar Socialstyrelsens beslutstöd för angiven huvuddiagnos">Socialstyrelsens
-      försäkringsmedicinska beslutsstöd</a>
+      försäkringsmedicinska beslutsstöd</a> <img src="/img/link_icon.png"/>
     <wc-fmb-help-display related-form-id="FALT5" fmb-states="fmbViewState" field-name="AKTIVITETSBEGRANSNING">
       <wc-validation-wrapper field-type="multi-text"
                              validations="viewState.getValidationErrors('aktivitetsbegransning')">
