TEST-ENV: Bytt tillbaka till ts-bas-> kommentarEjAngivet span till ng-show för att få igenom fitnesse.

--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/intyg/intyg.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/intyg/intyg.html
@@ -340,7 +340,7 @@
                 <span ng-if="viewState.intygModel.kommentar.length > 0">
                   <span id="kommentar" class="intyg-answer">{{viewState.intygModel.kommentar}}</span>
                 </span>
-                <span ng-if="!viewState.intygModel.kommentar" id="kommentarEjAngivet">
+                <span ng-show="!viewState.intygModel.kommentar" id="kommentarEjAngivet">
                   <span class="intyg-answer" message key="ts-bas.label.bedomning-info-ej-angivet"></span>
                 </span>
               </div>
