INTYG-3517: Changed z-order to bypass erroneous event for clicking caret.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_bootstrap-overrides.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_bootstrap-overrides.scss
@@ -467,6 +467,14 @@ $font-3: sans-serif;
 }
 
 /* ---------------------------------------
+ * ui-select overrides
+ * --------------------------------------- */
+
+/* fix click on caret not opening select box bug */
+.ui-select-toggle { z-index: 1; }
+.caret { z-index: -1; }
+
+/* ---------------------------------------
  * breakpoint overrides
  * --------------------------------------- */
 @media (min-width: 768px) {
