INTYG-3652:  Rensat bort alla spår av kod/markup/css i relaterat till htmlutskrift av utkast/makulerade intyg.

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/intyg/intyg.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/intyg/intyg.html
@@ -122,7 +122,7 @@
 
               <div wc-field field-number="7" field-label="fk7263.label.rehabilitering-aktuell"
                    filled="{{viewState.intygModel.rehabilitering!=null}}"
-                   id="field7" class="print-pagebreak-after">
+                   id="field7">
                 <span id="rehabiliteringAktuell" ng-show="viewState.intygModel.rehabilitering == 'rehabiliteringAktuell'"><span message key="fk7263.label.yes"></span></span>
                 <span id="rehabiliteringEjAktuell" ng-show="viewState.intygModel.rehabilitering == 'rehabiliteringEjAktuell'"><span message key="fk7263.label.no"></span></span>
                 <span id="rehabiliteringGarInteAttBedoma" ng-show="viewState.intygModel.rehabilitering == 'rehabiliteringGarInteAttBedoma'"><span message key="fk7263.label.gar-ej-att-bedomma"></span></span>
