--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form13.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form13.html
@@ -1,6 +1,6 @@
 <div class="">
     <div wc-field field-label="fk7263.label.ovrigt" field-number="13"
-         field-help-text="fk7263.helptext.ovrigt" class="print-pagebreak-after">
+         field-help-text="fk7263.helptext.ovrigt">
                 <textarea id="otherInformation" name="otherInformation" rows="6"
                           class="form-control otherInformation" auto-expand
                           ng-model="model.kommentar"
