--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form2.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form2.html
@@ -2,7 +2,7 @@
 
   <a id="anchor-diagnos" name="anchor.diagnos"></a>
   <div wc-field field-label="fk7263.label.diagnos" field-number="2" field-help-text="fk7263.helptext.diagnos"
-       class="print-pagebreak-after" field-has-errors="viewState.common.validation.messagesGrouped.diagnos"
+       field-has-errors="viewState.common.validation.messagesGrouped.diagnos"
        id="diagnoseForm">
 
     <wc-fmb-help-display related-form-id="FALT2" fmb-states="fmbViewState" field-name="DIAGNOS">
