--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form5.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form5.html
@@ -3,8 +3,7 @@
 
   <div wc-field field-label="fk7263.label.aktivitetsbegransning" field-number="5"
        field-help-text="fk7263.helptext.aktivitetsbegransning"
-       field-has-errors="viewState.common.validation.messagesGrouped.aktivitetsbegransning" field-required="true"
-       class="print-pagebreak-after">
+       field-has-errors="viewState.common.validation.messagesGrouped.aktivitetsbegransning" field-required="true">
 
     <a class="soclink" href="http://www.socialstyrelsen.se/riktlinjer/forsakringsmedicinsktbeslutsstod"
        target="_blank" title="Öppnar Socialstyrelsens beslutstöd för angiven huvuddiagnos">Socialstyrelsens
