--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form6b.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form6b.html
@@ -1,6 +1,6 @@
 <div class="field-fade" ng-hide="viewState.avstangningSmittskydd()">
     <div wc-field field-label="fk7263.label.atgarder" field-number="6b"
-         field-help-text="fk7263.helptext.atgarder" class="print-pagebreak-after">
+         field-help-text="fk7263.helptext.atgarder">
         <div class="form-group">
             <label class="control-label">Planerad eller pågående behandling eller åtgärd inom sjukvården (ange
                 vilken)</label>
