--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form8b.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form8b.html
@@ -3,7 +3,7 @@
 
   <div ng-form="form8b">
     <div wc-field field-label="fk7263.label.nedsattning" field-number="8b"
-         field-help-text="fk7263.helptext.arbetsformaga" class="arbetsformaga print-pagebreak-after"
+         field-help-text="fk7263.helptext.arbetsformaga" class="arbetsformaga"
          field-has-errors="viewState.common.validation.messagesGrouped.nedsattning" id="arbetsformagaForm"
          field-required="true">
 
