INTYG-3597: Satt lite adresserbara idn inför protractortester

--- a/fk/lisjp/src/main/resources/META-INF/resources/webjars/lisjp/minaintyg/views/customize-pdf.html
+++ b/fk/lisjp/src/main/resources/META-INF/resources/webjars/lisjp/minaintyg/views/customize-pdf.html
@@ -7,7 +7,7 @@
     <div class="row customize-pdf-header">
       <div class="col-xs-12">
         <h1 ng-focus="pagefocus" tabindex="-1">
-          <span message key="lisjp.customize.step.1.pagetitle"></span>
+          <span id="customizeCertificateHeader" message key="lisjp.customize.step.1.pagetitle"></span>
         </h1>
         <div class="wizard">
           <ul class="steps">
