--- a/fk/lisjp/src/main/resources/META-INF/resources/webjars/lisjp/minaintyg/views/customize-pdf-summary.html
+++ b/fk/lisjp/src/main/resources/META-INF/resources/webjars/lisjp/minaintyg/views/customize-pdf-summary.html
@@ -7,7 +7,7 @@
     <div class="row customize-pdf-header">
       <div class="col-xs-12">
         <h1 ng-focus="pagefocus" tabindex="-1">
-          <span message key="lisjp.customize.step.2.pagetitle"></span>
+          <span id="customizeCertificateSummaryHeader" message key="lisjp.customize.step.2.pagetitle"></span>
         </h1>
         <div class="wizard">
           <ul class="steps">
@@ -31,7 +31,7 @@
             <div class="intyg-body">
               <h2>Information din arbetsgivare kan se</h2>
 
-              <selectable-field-list cert="cert" field-config="customizeViewstate.getModel()" summary="true" show-deselected="false"></selectable-field-list>
+              <selectable-field-list id="lisjp-included-fields" cert="cert" field-config="customizeViewstate.getModel()" summary="true" show-deselected="false"></selectable-field-list>
 
               <!--
               Uppgifter som INTE tas med i intyget
@@ -40,7 +40,7 @@
                 <h2>Information din arbetsgivare INTE kan se</h2>
                 <p>Dina val är frivilliga, men att dela med sig av information kan underlätta arbetsgivarens möjlighet att göra arbetsanpassningar för dig.</p>
 
-                 <selectable-field-list cert="cert" field-config="customizeViewstate.getModel()" summary="true" show-deselected="true"></selectable-field-list>
+                 <selectable-field-list id="lisjp-excluded-fields" cert="cert" field-config="customizeViewstate.getModel()" summary="true" show-deselected="true"></selectable-field-list>
              </span>
 
             </div>
