INTYG-3659: Hantering och stil för avliden patient på sök/skriv intyg.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
@@ -942,3 +942,11 @@ wc cookie banner css.
 .bottom-padding-tiny {
   padding-bottom: 2px;
 }
+
+.mark-webcert-red {
+  color: #ff4565
+}
+
+.italic {
+  font-style: italic;
+}
