INTYG-3708: Fixade restpunkter från test. Ej bold stjärnor och rubrik och stjärnfix på luaena.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
@@ -379,6 +379,8 @@
   .required {
     color: $color_radical_red_approx;
     font-size: 14px;
+    font-weight: normal;
+    font-style: normal;
   }
 
   input[type=radio] {
