INTYG-3660: Inaktiv enhet frontend

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_wc-header.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_wc-header.scss
@@ -37,6 +37,10 @@ $stat-circle-active-border-color: #ff4565;
 /* Urls variables */
 $url-avatar: url('/img/avatar.png');
 
+#inactiveWarning{
+  font-style: italic;
+}
+
 .header {
   background-color: $header-background-color;
   padding: 5px 0 15px; /* don't change this setup. it's needed for IE8 flow on smaller screens to work */
